corrected the alignment error

--- a/prohealth-react/src/sass/common/_general.scss
+++ b/prohealth-react/src/sass/common/_general.scss
@@ -323,6 +323,7 @@ hr {
   border: none;
   position: relative;
   background: transparent;
+  margin:3rem;
   @media (max-width: 991px) {
     padding: 12px 30px;
   }
